More compilation errors correction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ project(WenkitSQLite CXX)
 
 cmake_minimum_required(VERSION 2.6)
 
+set(CMAKE_COLOR_MAKEFILE ON)
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
+set(CMAKE_BUILD_TYPE Debug)
+
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${PROJECT_SOURCE_DIR}/../../cmake" ${CMAKE_MODULE_PATH})
 
 add_definitions(-DDEBUG -std=c++0x)
