Change DEBUG to NDEBUG. Use release libray for sqlite.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,9 @@ cmake_minimum_required(VERSION 2.6)
 set(CMAKE_COLOR_MAKEFILE ON)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-set(CMAKE_BUILD_TYPE Debug)
-
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${PROJECT_SOURCE_DIR}/../../cmake" ${CMAKE_MODULE_PATH})
 
-add_definitions(-DDEBUG -std=c++0x)
+add_definitions(-DNDEBUG -std=c++0x)
 
 find_package(Sqlite3 REQUIRED)
 find_package(GTest REQUIRED)
@@ -33,7 +31,7 @@ add_executable(${TARGET}
     ./SQLiteTransaction.cpp
     ./test/test_SQLite.cpp)
 
-target_link_libraries(${TARGET} ${SQLITE3_LIBRARIES} ${GTEST_BOTH_LIBRARIES} pthread)
+target_link_libraries(${TARGET} ${SQLITE3_LIBRARY_RELEASE} ${GTEST_BOTH_LIBRARIES} pthread)
 
 set(GTEST_ARGS "--gtest_color=yes ")
 enable_testing()
