--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_definitions(-DNDEBUG -std=c++0x)
 
 find_package(Sqlite3 REQUIRED)
 find_package(GTest REQUIRED)
+find_package(Glog REQUIRED)
 
 include_directories(${PROJECT_SOURCE_DIR}/)
 include_directories(${PROJECT_SOURCE_DIR}/include)
@@ -18,6 +19,7 @@ include_directories(${PROJECT_SOURCE_DIR}/test)
 
 include_directories(${SQLITE3_INCLUDE_DIR})
 include_directories(${GTEST_INCLUDE_DIRS})
+include_directories(${GLOG_INCLUDE_DIRS})
 
 set(TARGET unitTest)
 
@@ -31,7 +33,7 @@ add_executable(${TARGET}
     ./SQLiteTransaction.cpp
     ./test/test_SQLite.cpp)
 
-target_link_libraries(${TARGET} ${SQLITE3_LIBRARY_RELEASE} ${GTEST_BOTH_LIBRARIES} pthread)
+target_link_libraries(${TARGET} ${SQLITE3_LIBRARY_RELEASE} ${GTEST_BOTH_LIBRARIES} ${GLOG_LIBRARIES} pthread)
 
 set(GTEST_ARGS "--gtest_color=yes ")
 enable_testing()
